Renamed parser.py -> web_scrapper.py

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -34,104 +34,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "id": "11fb0618",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-25T12:38:20.126169Z",
-     "start_time": "2022-12-25T12:38:20.099719Z"
+     "end_time": "2022-12-25T13:58:20.781824Z",
+     "start_time": "2022-12-25T13:58:20.778236Z"
     }
    },
    "outputs": [],
    "source": [
-    "class Parser:\n",
-    "\n",
-    "    def __init__(self, data=pd.DataFrame({'time': [], 'title': [], 'link': [], 'source': [], 'processed': []})):\n",
-    "        self.df = data\n",
-    "        self.interfax_url = 'https://www.interfax.ru/news/'\n",
-    "        self.lenta_url = 'https://lenta.ru/'\n",
-    "\n",
-    "    def parse_interfax(self, date):\n",
-    "        \n",
-    "        res = pd.DataFrame({'time': [], 'title': [], 'link': [], 'source': [], 'processed': []})\n",
-    "        def get_right_link(x):\n",
-    "            if 'http' in x:\n",
-    "                return x\n",
-    "            else:\n",
-    "                return 'https://interfax.ru' + x\n",
-    "\n",
-    "        for i in range(1, 20):\n",
-    "            response = requests.get(\n",
-    "                self.interfax_url + date + '/all/page_' + str(i))\n",
-    "            soup = BeautifulSoup(response.text, 'lxml')\n",
-    "\n",
-    "            items = soup.find(class_='an')\n",
-    "\n",
-    "            time_stamps = [date + item.text for item in items.find_all('span')]\n",
-    "            links = [get_right_link(item.get('href'))\n",
-    "                     for item in items.find_all('a')]\n",
-    "            titles = [item.find('h3').get_text().strip()\n",
-    "                      for item in items.find_all('a')]\n",
-    "            if links[0] in self.df['link'].values:\n",
-    "                break\n",
-    "                \n",
-    "            res = pd.concat([res, pd.DataFrame({'time': time_stamps, \n",
-    "                                'title': titles, 'link': links, 'source': 'interfax'})])\n",
-    "        \n",
-    "        res['time'] = pd.to_datetime(res['time'], format='%Y/%m/%d%H:%M')\n",
-    "        \n",
-    "        \n",
-    "        return res\n",
-    "\n",
-    "    def parse_lenta(self, date):\n",
-    "        \n",
-    "        res = pd.DataFrame({'time': [], 'title': [], 'link': [], 'source': [], 'processed': []})\n",
-    "        for i in range(1, 30):\n",
-    "            response = requests.get(self.lenta_url + date + '/page/' + str(i))\n",
-    "            soup = BeautifulSoup(response.text, 'lxml')\n",
-    "\n",
-    "            items = soup.find_all(class_='archive-page__item _news')\n",
-    "            \n",
-    "            if len(items) == 0:\n",
-    "                break\n",
-    "\n",
-    "            links = [self.lenta_url[:-1] +\n",
-    "                     item.find('a').get('href') for item in items]\n",
-    "            time_stamps = [date + item.find('time').text[:5] for item in items]\n",
-    "            titles = [item.find('h3').text for item in items]\n",
-    "            \n",
-    "            res = pd.concat([res, pd.DataFrame({'time': time_stamps, \n",
-    "                                'title': titles, 'link': links, 'source': 'lenta'})])\n",
-    "        \n",
-    "        res['time'] = pd.to_datetime(res['time'], format='%Y/%m/%d%H:%M')\n",
-    "        \n",
-    "        return res\n",
-    "\n",
-    "    def parse(self, n_days=30, mode='default'):\n",
-    "\n",
-    "        if mode == 'update':\n",
-    "            start_date = self.df['time'].max()\n",
-    "            if start_date is np.nan:\n",
-    "                raise ValueError(\n",
-    "                    \"Existing database is empty. Use mode='default' to fill it from scratch\"\n",
-    "                )\n",
-    "            start_date, end_date = start_date.date(), datetime.date.today()\n",
-    "        else:\n",
-    "            start_date, end_date = datetime.date.today(\n",
-    "            ) - datetime.timedelta(days=n_days), datetime.date.today()\n",
-    "            \n",
-    "        delta = end_date - start_date\n",
-    "        dates = [str(start_date + datetime.timedelta(days=i))[:4] + '/'\n",
-    "                 + str(start_date + datetime.timedelta(days=i))[5:7] + '/'\n",
-    "                 + str(start_date + datetime.timedelta(days=i))[8:10] for i in range(delta.days + 1)]\n",
-    "        \n",
-    "        for date in tqdm(dates):\n",
-    "            self.df = pd.concat([self.df, self.parse_interfax(date)])\n",
-    "            self.df = pd.concat([self.df, self.parse_lenta(date)])\n",
-    "            \n",
-    "        self.df.drop_duplicates(subset='link', inplace=True)\n",
-    "        self.df.sort_values(by='time', inplace=True)\n",
-    "        self.df.reset_index(drop=True, inplace=True)"
+    "from parser import Parser\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "36e9e1cf",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-12-25T13:58:14.296986Z",
+     "start_time": "2022-12-25T13:58:14.281368Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<parser.Parser at 0x7f9c1a7cfd90>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parser.Parser()"
    ]
   },
   {
@@ -3937,7 +3877,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
